[package]
name = "ipc-util"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["ipc"]
description = "Provides a simple cross-platform generic IPC server and client system."
repository = "https://github.com/sudosilico/yabai.rs/"

[dependencies]
thiserror = "1.0.30"
bincode = "1.3.3"
byteorder = "1.4.3"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
serde = { version = "1.0.130", features = ["derive"] }
sysinfo = "0.28.4"
tokio = { version="1", features=["full"] }
