[package]
name = "ipc_util"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["ipc", "interprocess"]
description = "Simple cross-platform generic IPC message passing built on top of the `interprocess` crate."
repository = "https://github.com/sudosilico/ipc-util/"

[dependencies]
thiserror = "1.0.30"
bincode = "1.3.3"
byteorder = "1.4.3"
serde = { version = "1.0.130", features = ["derive"] }
sysinfo = "0.28.4"
interprocess = "1.2.1"